--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class = "text">Discover hidden places in the world around you</h1>
     <p><a href="" target="_blank">Download excursion(Coming soon)</a></p>
 
 </body>
