--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h1 class = "text">Discover hidden places in the world around you</h1>
     <p><a href="" target="_blank">Download excursion(Coming soon)</a></p>
 
-    
+    <video autoplay muted loop >
+        <source src="resources/video/excursion.mp4" type="video/mp4">
+        <source src="resources/video/excursion.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
 
 </body>
 </html>
