Add respective pictures to the web page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1 class = "text">Discover hidden places in the world around you</h1>
+    <h1>Discover hidden places in the world around you</h1>
     <p><a href="" target="_blank">Download excursion(Coming soon)</a></p>
 
     <video autoplay muted loop >
@@ -16,6 +16,12 @@
         <source src="resources/video/excursion.mp4" type="video/ogg">
       Your browser does not support the video tag.
       </video>
+
+    <h2> Your personal travel guide </h2>
+    <h3>Excursion remembers places you like, and recommends new points of interests around you.</h3>
+
+    <img class= "campsite" src="resources/images/camp.jpg" alt="image">
+    <p><img class = "app" src="resources/images/phone.png" alt="image"></p>
 
 </body>
 </html>
