--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <img class= "campsite" src="resources/images/camp.jpg" alt="image">
     <p><img class = "app" src="resources/images/phone.png" alt="image"></p>
 
+    <h1>Coming soon for iPhone and Android</h1>
+
+    <p><a href="" target="_blank">Download excursion(Coming soon)</a></p>
+
+    <span>&copy; Excursion </span>
+
+
+
 </body>
 </html>
 
