Modify the footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
     <p><a href="" target="_blank">Download excursion(Coming soon)</a></p>
 
-    <span>&copy; Excursion </span>
+    <div class= "footer">
+        <p>&copy; Excursion </p>
+    </div>
+    
 
 
 
